[gd_scene load_steps=2 format=3 uid="uid://cw5n22sqwj0rc"]

[ext_resource type="Script" uid="uid://bjrqyvbp13joy" path="res://stage4/hud_stage4.gd" id="1"]

[node name="HUDStage4" type="CanvasLayer"]
script = ExtResource("1")

[node name="HPBar" type="ProgressBar" parent="."]
offset_left = 20.0
offset_top = 20.0
offset_right = 200.0
offset_bottom = 47.0
value = 100.0

[node name="HPLabel" type="Label" parent="."]
offset_left = 24.0
offset_top = 20.0
offset_right = 51.0
offset_bottom = 47.0
text = "HP:"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ScoreLabel" type="Label" parent="."]
offset_left = 220.0
offset_top = 18.0
offset_right = 290.0
offset_bottom = 38.0
text = "Score: 0"

[node name="QuestionLabel" type="Label" parent="."]
offset_left = 181.0
offset_top = 93.0
offset_right = 481.0
offset_bottom = 126.0
text = "1 + 1 = ?"
horizontal_alignment = 1

[node name="Answers" type="Node" parent="."]

[node name="Answer1" type="Label" parent="Answers"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = -140.0
offset_right = 166.0
offset_bottom = -117.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "67"

[node name="Answer2" type="Label" parent="Answers"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_right = 166.0
offset_bottom = 23.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "67"

[node name="Answer3" type="Label" parent="Answers"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 126.0
offset_top = 140.0
offset_right = 166.0
offset_bottom = 163.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 1
text = "67"
